# bosonic-simulator

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  ci.sh
src/: chebyshev.rs  main.rs  subroutines.rs  subroutines_tests.rs  subroutines_utils.rs  tasks.rs  test_utils.rs
task_examples/: debug_plot.py
tasks/: density_dynamics_plotter.py  eta2.yaml  eta3.yaml  eta4.yaml  eta5.yaml  eta6.yaml
unsorted/: subroutines.rs
