[package]
name = "bosonic_processor"
version = "0.1.0"
edition = "2021"


[dependencies]
num-complex = { version = "0.4.3", features = ["serde"] }
num-traits = "0.2.15"
rayon = "1.7.0"
num_cpus = "1.16.0"
clap = { version = "4.3.17", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
log = "0.4.19"
env_logger = "0.9.0"
indicatif = "0.17.5"

[dev-dependencies]
ndarray = "0.15.6"
ndarray_einsum_beta = "0.7.0"
rand = "0.8.5"
